# modeling_work_system

./: .gitignore  Notes.md  README.md  ch_vers.py  libs.txt  pyproject.toml  text.tex
docs/: text.aux  text.out  text.pytxcode  text.tex  text.toc
docs/doc_pz_v1/: text.tex
docs/doc_pz_v2/: pz_v2.tex
experiments/: base_ae.ipynb  vae_ae.ipynb
img/: Не подтвержден 621117.crdownload
modeling_work_system/: config.py
modeling_work_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
modeling_work_system/experiment/: experiment.py
modeling_work_system/metrics/: aemetrics.py  compose_table_metrics.py  generation_metrics.py  metrics.py  metrics_vae.py  static_compare.py  statistic_compare.py  vae_inference.py
modeling_work_system/pipeline/: pipeline.py  (+3 more)
models/: model_lstm_vae_v2.pth  model_lstm_vae_v2_1.pth  model_lstm_vae_v2_2.pth  model_mamba_vae_v2.pth  model_mamba_vae_v2_2.pth  model_ssm_vae_v2.pth  model_transformer_vae_v2.pth  model_vrnn_vae_v2_2.pth
src/: config.py  main.py  pipeline.py
tests/: test_add_train.py  test_all_metods.py  test_experiments.py  test_experiments_generative.py  test_experiments_generative_2.py  test_experimetns_table.py  test_full_train.py  test_inference.py  test_lstm_vae.py  test_lstm_vae_2.py  test_mamba_vae.py  test_mamba_vae_2.py  test_peprocess_add.py  test_preprocess.py  test_split_data_by_engine.py  test_ssm_vae.py  test_ssm_vae_2.py  test_train.py  test_transf_vae_2.py  test_transformer_vae.py  test_user.py  test_user_engine.py  test_vrnn_vae.py  test_vrnn_vae_2.py  tests.ipynb  tests_transformer_vae.py
(+61 files in other folders)
