[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modeling-work-system"
version = "0.3.3"
description = "Anomaly detection with autoencoders"
dependencies = [
    "mlflow>=2.0",
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "tensorflow>=2.10",
    "dagshub>=0.1.0"

]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["modeling_work_system*"]